@@ -1,3 +1,13 @@
+2007-02-11  Daniel Atallah  <datallah@users.sourceforge.net>
+
+	* include/winnt.h (LANG_SERBIAN_NEUTRAL, LANG_BOSNIAN,
+	LANG_BOSNIAN_NEUTRAL): Define.
+
+2007-02-11  Daniel Schlyder  <thrug@users.sourceforge.net>
+
+	* include/winuser.h: Add guards around TITLEBARINFO and
+	GetTitleBarInfo().
+
 2007-01-11  Gisle Vanem  <giva@users.sourceforge.net>
 
 	* include/winbase.h (struct _OVERLAPPED): Change type of
